test/regress/coverage-global-report-error.test
; Test global.cc: report_error path with expression error
; Exercises report_error (lines 172-185) and execute_command_wrapper error path

2024/01/01 Test
    Expenses:Food    $25.00
    Assets:Checking

test bal --format "%(invalid_func())\n" -> 1
__ERROR__
While calculating format expression:
  invalid_func()
While evaluating value expression:
  invalid_func()
  ^^^^^^^^^^^^^^
Error: Unknown identifier 'invalid_func'
end test
